--- a/doc/manual/XCSoar-manual.tex
+++ b/doc/manual/XCSoar-manual.tex
@@ -5046,21 +5046,31 @@ configuration settings are hidden.  In the descriptions below,
 all of the parameters marked with an asterix are only visible in
 expert user level.
 
-% JMW TODO: screenshot
+Basic user level:
+\begin{center}
+\includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-basic.png}
+\end{center}
+
+Expert user level:
+\begin{center}
+\includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-expert.png}
+\end{center}
 
 \subsection*{Safety lock}
 
 A safety feature is available to prevent settings being modified in
 flight.  This optionally prevents the configuration settings dialog
-from starting if the aircraft is in flight.
+from starting if the aircraft is in flight. See Section~\ref{sec:interface} for customisation.
 
-\subsection*{Fail-safe}
+Note: In simulator mode the configuration settings dialog will also be available in flight.
 
-If the XCSoar software crashes due to an unrecoverable error while
-loading a file, the file will be removed from the configuration
-settings in order to prevent the crash reoccuring.  Therefore, if an
-error was found in a file, the user must re-enter that file in the
-configuration settings after remedying the situation.
+%\subsection*{Fail-safe}
+
+%If the XCSoar software crashes due to an unrecoverable error while
+%loading a file, the file will be removed from the configuration
+%settings in order to prevent the crash reoccuring.  Therefore, if an
+%error was found in a file, the user must re-enter that file in the
+%configuration settings after remedying the situation.
 
 \clearpage
 \section{Site}
@@ -5074,11 +5084,6 @@ configured when flying at a new site.
 \begin{description}
 \item[Map file]  The name of the map file (XCM) containing digital elevation
   terrain data, topology, waypoints etc.
-\item[Terrain file]  The name of the file containing digital elevation
-  terrain data.  If left blank, terrain is loaded from the map file.
-\item[Topology file]  Specifies the file defining the topological features.
-The topology file defines the map topology in terms of points, lines
-and areas with optional labels.  If left blank, topology is loaded from the map file.
 \item[Waypoints 1]
 Primary waypoints file.  If left blank, waypoints are loaded from the map file
 (if available).
@@ -5086,13 +5091,23 @@ Primary waypoints file.  If left blank, waypoints are loaded from the map file
 Secondary waypoints file.  This may be used to add waypoints for a competition.
 \item[Airspace 1] The file name of the primary airspace file.
 \item[Airspace 2] The file name of the secondary airspace file.
-\item[Airfields file]
+\item[Terrain file*]  The name of the file containing digital elevation
+  terrain data.  If left blank, terrain is loaded from the map file.
+\item[Topology file*]  Specifies the file defining the topological features.
+The topology file defines the map topology in terms of points, lines
+and areas with optional labels.  If left blank, topology is loaded from the map file.
+\item[Airfields file*]
 The airfields file may contain extracts from Enroute Supplements or
 other contributed information about individual airfields.
-\item[Wpt outside terrain] This option defines how waypoints outside the 
+\item[Wpt outside terrain*] This option defines how waypoints outside the 
   terrain range are handled: the user can be asked when this occurs,
   or they can be always included or excluded.
 \end{description}
+
+Airspace files define Special Use Airspace.  Up to two files may be
+specified, the first for the main SUA file, and the second is intended
+for use with NOTAM airspace, and is referred to as the additional
+airspace file.
 
 The terrain file is the digital elevation model used for terrain
 calculations and for display of terrain elevation with slope shading
@@ -5110,10 +5125,6 @@ files and they will be used instead of the data in the map file.
 
 See Section~\ref{sec:map} for more details on map files.
 
-Airspace files define Special Use Airspace.  Up to two files may be
-specified, the first for the main SUA file, and the second is intended
-for use with NOTAM airspace, and is referred to as the additional
-airspace file.
 
 \clearpage
 \section{Airspace}
@@ -5137,63 +5148,82 @@ displayed and how warnings are issued.
 \item[Clip altitude] For clip mode, this is the altitude below which airspace is displayed.
 \item[Margin] For auto mode, this is the safety margin for warnings and display.
 \item[Warnings] Determines whether all warnings are enabled or disabled.
-\item[Warning time]  This is the time before an incursion is estimated at
+\item[Warning time*]  This is the time before an incursion is estimated at
   which the system will warn the pilot.
-\item[Acknowledgement]  This is the time period in which an acknowledged airspace warning will not be repeated.
-\item[Use black outline] Draws a black outline around each airspace
+\item[Acknowledge time*]  This is the time period in which an acknowledged airspace warning will not be repeated.
+\item[Use black outline*] Draws a black outline around each airspace
 \end{description}
 
 This page also has \button{Colours} and \button{Filter} buttons which
 can be used to review or change the colours/patterns used by each
 airspace class, and whether each airspace class will be filtered out
-of warnings and/or display.  The filter function is described in
-Section~\ref{sec:airsp-filt-dial}.
+of warnings and/or display.  
 
-\clearpage
-\section{Airspace Colours and Patterns}
-
-This page is used to determine the colours used to draw each type of
+\subsection*{Colours}
+This function is used to determine the colours used to draw each type of
 airspace.
 
-This is accessed via the configuration dialog, menu under
-\bmenu{CONFIG}\blink\bmenu{Setup system} in the Airspace page, select the
-button \button{Colours}
-
-First select the airspace type you wish to change.  Then select the
-colour and pattern you wish it to be drawn in.
+First select the airspace type you wish to change.
 
 \begin{center}
 \includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-airspacecolors.png}
 \end{center}
+
+Pressing the \button{Lookup} button brings up the airspace select dialog.
+This functions similarly to the waypoint lookup dialog, and allows
+search based on name, distance, direction, and type (class).  
+
+\begin{center}
+\includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/airspacelookup.png}
+\end{center}
+
+Now select the colour and pattern you wish the selected airspace to be drawn in.
+
+
+\subsection*{Filters}
+The filter function is described in Section~\ref{sec:airsp-filt-dial}.
+
+%\clearpage
+%\section{Airspace Colours and Patterns}
+
+
+%This is accessed via the configuration dialog, menu under
+%\bmenu{CONFIG}\blink\bmenu{Setup system} in the Airspace page, select the
+%button \button{Colours}
 
 %%%%%%%%%%%%%%%%%%
 
 \clearpage
 \section{Map Display}\label{sec:map-display}
 
-This page has options relating to the map display.
+This page provides options relating to the map display.
 
 \begin{center}
 \includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-2.png}
 \end{center}
 
 \begin{description}
-\item[Labels] This setting determines the label displayed with each waypoint. There are 6 options:
+\item[Labels] This setting determines the label displayed with each waypoint. There are 7 options:
+
+%TODO: what is a ``waypoint number''?
+%TODO: tail drift: measuring unit?
+%TODO: ``idle blank screen'' still necessary?
 
 \begin{description}
 \item[Names] The full name of each waypoint is displayed.
 \item[Numbers] The waypoint number of each waypoint is displayed.
 \item[None] No names are displayed with the waypoints.
 \item[Names in task] Names are only displayed for waypoints that are in the active task as well as the home airfield.
-\item[First Three] The first 3 letters of the waypoint name are displayed.
-\item[First Five] The first 5 letters of the waypoint name are displayed.
+\item[First 3] The first 3 letters of the waypoint name are displayed.
+\item[First 5] The first 5 letters of the waypoint name are displayed.
+\item[First word] Only the first word (up to the first space) of the waypoint name is displayed.
 \end{description}
 \item[Trail length] Determines whether and how long a snail trail is drawn behind the glider.
 \begin{description}
 \item[Off] No trail is drawn
 \item[Long] A long trail is drawn (approx 60 minutes)
-\item[Short] A short trail is drawn (approx 10) minutes 
-\item[Full] Displays the entire flight
+\item[Short] A short trail is drawn (approx 10 minutes) 
+\item[Full] A trail for the entire flight is drawn
 \end{description}
 \item[Orientation]  This determines how the screen is rotated with the glider.
 
@@ -5201,8 +5231,8 @@ This page has options relating to the map display.
 \item[North up] The moving map display will always be orientated north to south and the glider icon will be rotated to show its course.
 \item[Track up] The moving map display will be rotated so the glider's track
  is oriented up.
-\item[North up when circling] This is equivalent to track-up in cruise and north-up when circling.
-\item[Target up when circling] This is equivalent to track-up in cruise and the bearing to next waypoint up when circling.
+\item[North circling] This is equivalent to track-up in cruise and north-up when circling.
+\item[Target circling] This is equivalent to track-up in cruise and the bearing to next waypoint up when circling.
 \item[North/track] North-up in cruise, glider track-track up in circling
 \end{description}
 \item[Auto zoom] Determines whether auto-zoom is enabled.  Auto-zoom changes
@@ -5213,14 +5243,14 @@ will be maintained for circling and cruise modes.  If unchecked, there
 is only one zoom.  If enabled, then the map will zoom in automatically
 when entering circling mode and zoom out automatically when leaving
 circling mode.
-\item[Trail drift] Determines whether the snail trail is drifted with the wind when displayed in circling mode.  When OFF, the snail trail is uncompensated for wind draft.
-\item[Trail width] Sets the width of the snail trail display.
+\item[Trail drift*] Determines whether the snail trail is drifted with the wind when displayed in circling mode.  When OFF, the snail trail is uncompensated for wind draft.
+\item[Trail width*] Sets the width of the snail trail display.
 \item[Idle blank screen] (PDA only)
 This determines whether the display should be blanked after 60 seconds
 of inactivity when running on batteries.  Blanked screens have a
 significantly reduced drain on the battery.  The screen can be turned
 on again by pressing any button.
-\item[Wind arrow]  Determines the way the wind arrow is drawn on the map.
+\item[Wind arrow*]  Determines the way the wind arrow is drawn on the map.
 \begin{description}
 \item[Arrow head] Draws an arrow head only
 \item[Full arrow] Draws an arrow head with a dashed arrow line
@@ -5252,6 +5282,8 @@ This page sets how terrain and topology is drawn on the map window.
 
 \begin{maxipage}
 The available terrain color schemes are illustrated in the table below.
+
+%TODO: scheme ``grey'' is missing; ``flatlands'' is displayed ``lowlands''
 
 \begin{longtable}{c c c}
 \includegraphics[angle=0,width=3.5cm,keepaspectratio='true']{figures/ramp-terrain-flatlands.png}&
@@ -5285,33 +5317,41 @@ This page allows glide computer algorithms to be configured.
 \end{center}
 
 \begin{description}
-\item[Glide terrain line]  This determines whether the the
-glide terrain range is calculated and drawn as a line on the map area.
+\item[Glide terrain line]  This determines whether the
+glide terrain range is calculated and drawn as a line resp. a shade on the map area.
 \item[Auto wind] This allows switching on or off the automatic wind algorithm.
-  When the algorithm is switched off, the pilot is responsible for
-  setting the wind estimate. Circling mode requires only a GPS source, 
-  ZigZag requires an intelligent vario with airspeed output.
-\item[Auto Mc mode] This option defines which auto MacCready algorithm is used.
-Final glide adjusts Mc for fastest arrival.  Average sets Mc to the average climb rate across all climbs.  Both can also be used.
-\item[Lift center]  Controls display of the thermal locator.
-\begin{description}
-\item[OFF] Lift center locator disabled.
-\item[Circle at center]  A thermal marker is displayed at the center of lift.
-\item[Pan to center] A marker is displayed at the center of lift, 
- and when circling, the display is panned to this lift center.
+ \begin{description}
+\item[Manual] When the algorithm is switched off, the pilot is responsible for
+  setting the wind estimate.
+\item[Circling] Circling mode requires only a GPS source, 
+\item[ZigZag]  ZigZag requires an intelligent vario with airspeed output.
+\item[Both] Uses Circling and ZigZag.
 \end{description}
-\item[Block speed to fly] If enabled, the command speed in cruise
+\item[Auto Mc mode] This option defines which auto MacCready algorithm is used.
+ \begin{description}
+\item[Final glide] Final glide adjusts Mc for fastest arrival.
+\item[Average climb]  Average climb sets Mc to the average climb rate across all climbs.
+\item[Both] Uses average during task, then fastest arrival when in final glide mode.
+\end{description}
+%\item[Lift center]  Controls display of the thermal locator.
+%\begin{description}
+%\item[OFF] Lift center locator disabled.
+%\item[Circle at center]  A thermal marker is displayed at the center of lift.
+%\item[Pan to center] A marker is displayed at the center of lift, 
+% and when circling, the display is panned to this lift center.
+%\end{description}
+\item[Block speed to fly*] If enabled, the command speed in cruise
   is set to the MacCready speed to fly in no vertical air-mass movement.
   If disabled, the command speed in cruise is set to the dolphin speed to fly,
   equivalent to the MacCready speed with vertical air-mass movement.
-\item[Auto Force Final Glide] This option enables automatic forcing of final
- glide mode if the aircraft is above final glide prior to reaching the
- penultimate waypoint. Forcing final glide early can also be performed manually
- from the task menu.
-\item[Nav by baro altitude] When enabled and if connected to a barometric
+%\item[Auto Force Final Glide] This option enables automatic forcing of final
+% glide mode if the aircraft is above final glide prior to reaching the
+% penultimate waypoint. Forcing final glide early can also be performed manually
+% from the task menu.
+\item[Nav by baro altitude*] When enabled and if connected to a barometric
   altimeter, barometric altitude is used for all navigation functions. Otherwise
   GPS altitude is used.
-\item[Flap forces cruise]
+\item[Flap forces cruise*]
   When this option is enabled, causes the flap switches in Vega to
   force cruise mode when the flap is not positive.  This means that
   when departing a thermal, switching to neutral or negative flap will
@@ -5320,7 +5360,7 @@ Final glide adjusts Mc for fastest arrival.  Average sets Mc to the average clim
   Similarly, for Borgelt B50 systems, the speed command switch forces
   XCSoar's climb or cruise mode.
 
-\item[STF risk] 
+\item[STF risk factor*] 
   The STF risk factor reduces the MacCready setting used to calculate
   speed to fly as the glider gets low, in order to compensate for
   risk.  Set to 0.0 for no compensation, 1.0 scales Mc linearly with
@@ -5340,13 +5380,13 @@ This page allows the safety heights and behaviour in abort mode to be defined.
 \begin{description}
 \item[Arrival height]  The height above terrain that the glider
   should arrive at for a safe landing.
-\item[Break-off height]  This is the height above terrain, below which
-the pilot should abort the task and prepare for an outlanding.
+%\item[Break-off height]  This is the height above terrain, below which
+%the pilot should abort the task and prepare for an outlanding.
 \item[Terrain height] The height above terrain that the glider must
   clear during final glide.
-\item[Abort use current Mc]  When enabled, the current MacCready setting
+\item[Abort use current Mc*]  When enabled, the current MacCready setting
   is used for determining arrival altitude during task abort mode.
-\item[Safety Mc]  The MacCready setting used in task abort mode and
+\item[Safety Mc*]  The MacCready setting used in task abort mode and
   for determining arrival altitude at airfields. 
 \end{description}
 See Section~\ref{sec:safety-heights} for more details on the meanings
@@ -5369,7 +5409,8 @@ classes, as well as a special entry for `WinPilot File'.
  this is the name of the file containing the glide polar data.
 \item[V rough air] The maximum manoeuvring speed can be entered on this page to prevent the glide computer from commanding unrealistic cruise speeds.
 \item[Handicap] The handicap factor used for OnLine Contest scoring.
-\item[Auto logger] Enables the automatic starting and stopping of logger on takeoff and landing respectively.  Disable when flying paragliders to prevent the low ground speeds from triggering the automatic logger.
+%\item[Auto logger] Enables the automatic starting and stopping of logger on takeoff and landing respectively.  Disable when flying paragliders to prevent the low ground speeds from triggering the automatic logger.
+\item[Dump time] The time in seconds needed for dumping full ballast.
 \end{description}
 
 \clearpage
@@ -5395,15 +5436,10 @@ The specific type of device can also be selected from a list in order
 to enable support for devices with proprietary protocols or special
 functions.
 
-This page also has a \button{Vario config} button to display a
+This page also has a \button{Setup...} button to display a
 configuration dialog specific to the Vega intelligent variometer.
 This is described in the {\em Vega Advanced Configuration and Data
 Link Specification} manual.
-
-The \verb|Use GPS time| option, if enabled sets the clock of the computer
-to the GPS time once a fix is set.  This is only necessary if your computer
-does not have a real-time clock with battery backup or your computer frequently
-runs out of battery power or otherwise loses time.
 
 COM ports 0 to 10 may be used.  Which COM port is appropriate for you
 depends on what make of PDA you use, and the communications medium
@@ -5413,12 +5449,17 @@ beyond the scope of this document.  If you have trouble identifying
 which COM port to set, please refer to the XCSoar website and mailing
 lists.
 
+\begin{description}
+\item[Use GPS time] This option, if enabled sets the clock of the computer to the GPS time once a fix is set.  This is only necessary if your computer does not have a real-time clock with battery backup or your computer frequently runs out of battery power or otherwise loses time.
+\item[Ignore checksum*] If your GPS device outputs invalid NMEA checksums, this will allow it's data to be used anyway.
+\end{description}
+
 \clearpage
 \section{Units}
 
 This page allows you to set the units preferences used in all
 displays, {\InfoBox}es, dialogs and input fields.  Separate selections
-are available for speed, distance, lift rate, altitude, task
+are available for speed, distance, lift rate, altitude, temperature, task
 speed and latitude/longitude.
 
 \begin{center}
@@ -5433,36 +5474,45 @@ set.
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 \clearpage
-\section{Interface}
+\section{Interface}\label{sec:interface}
+
+%TODO: dialog style: description of values
 
 \begin{center}
 \includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-8.png}
 \end{center}
 
 \begin{description}
-\item[Auto Blank] This determines whether to blank the display after a long period of inactivity when operating on internal battery power.
+\item[Auto Blank] This determines whether to blank the display after a long period of inactivity when operating on internal battery power (for PDA only).
 \item[Safety lock]
 This determines whether the configuration settings dialog is
 accessible during flight.
-\item[Msg window] Defines the alignment of the status message box, either centered or in the top left corner.
-\item[Events]
+%\item[Msg window] Defines the alignment of the status message box, either centered or in the top left corner.
+\item[Events*]
 The Input Events file defines the menu system and how XCSoar responds
 to button presses and events from external devices.
-\item[Language]
+\item[Language*]
 The language file defines translations for XCSoar text in English to
 other languages.  If this field is left blank, then XCSoar uses
 English.
-\item[Status message]
+\item[Status message*]
 The status message file can be used to define sounds to be played when certain
 events occur, and how long various status messages will appear on screen.
-\item[Menu timeout]
+\item[Menu timeout*]
 This determines how long menus will appear on screen if the user
 does not make any button presses or interacts with the computer.
-\item[De-bounce timeout]
+\item[De-bounce timeout*]
 This is the minimum interval between the system recognising key presses. 
 Set this to a low value for a more responsive user interface; if
 it is too low, then accidental multiple key presses can occur.
-\item[Animation] Determines whether to draw window animations when dialogs open and close.
+%\item[Animation] Determines whether to draw window animations when dialogs open and close.
+\item[Text Input Style*] Determines which style for text entries is used. See Section~ for further information on text entries.
+\begin{description}
+\item[HighScore Style] For entering text you have to change the underlined character to the relevant letter.
+\item[Keyboard] Uses the on-screen keyboard for entering text.
+\item[Default] Uses the default input style for your platform.
+\end{description}
+\item[Dialog Style*] Determines the display size of dialogs.
 \end{description}
 
 Some Pocket PC devices have poorly designed keys that are subject to
@@ -5487,20 +5537,36 @@ in percent from the bottom.
 \item[Final glide bar] Two styles are available: Default and Alternate.  The differences between these styles is cosmetic.  Alternate displays the height difference to the right of the final glide bar; default displays the height difference above/below the final glide bar and inside a rounded box.
 \item[Landable fields] Two styles are available: WinPilot style (green and
   purple circles) or a high visibility style.
-\item[Default map zoom]
-\item[North arrow]  Two styles are available.  Normal, or with a white
+\item[Default map zoom*]
+\item[North arrow*]  Two styles are available.  Normal, or with a white
  outline.
-\item[Inverse InfoBoxes]  If true, the InfoBoxes are white on black, otherwise black on white.
-\item[Colour InfoBoxes]  If true, certain InfoBoxes will have coloured text.  For example, the active waypoint infobox will be blue when the glider is above final glide.
-\item[Infobox border]  Two styles for infobox borders are available:
+\item[Inverse InfoBoxes*]  If true, the InfoBoxes are white on black, otherwise black on white.
+\item[Colour InfoBoxes*]  If true, certain InfoBoxes will have coloured text.  For example, the active waypoint infobox will be blue when the glider is above final glide.
+\item[Infobox border*]  Two styles for infobox borders are available:
 `Box' draws boxes around each infobox.  `Tab' draws a tab at the top
 of the infobox across the title.
+\item[Infobox Geometry] Sets the geometry values for infoboxes. In landscpae mode infoboxes are placed left and right, in portrait mode top and bottom of the screen. The numbers in front refer to the total number of infoboxes.
+\item[Msg window*]  Defines the alignment of the status message box, either centered or in the top left corner.
 \end{description}
 
 %%%%%%%%%%
 
 \clearpage
-\section{Vario gauge and FLARM}\label{sec:vario-gauge}
+\section{Fonts}
+
+This page enables customisation of fonts in various fields of the programm.
+
+\begin{center}
+\includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-fonts.png}
+\end{center}
+
+Once the customisation is enabled, the \button{Edit} buttons allow to change some parameters (Font Face, Height, Bold and Italic) of the chosen font.
+
+If customisation is disabled, default fonts will be used.
+%%%%%%%%%%
+
+\clearpage
+\section{FLARM and other gauges}\label{sec:vario-gauge}
 
 \begin{center}
 \includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-10.png}
@@ -5511,63 +5577,57 @@ of the infobox across the title.
 When shown, in cruise mode, arrows point up to command slow down; arrows point down to command speed up.
 \item[Show average]  Whether to show the average climb rate.  In cruise mode, this switches to showing the average netto airmass rate.
 \item[Show MacCready] Whether to show the MacCready setting.
-\item[Show bugs] Whether to show the bugs percentage.
-\item[Show ballast] Whether to show the ballast percentage.
-\item[Show gross] Whether to show the gross vario value
-\item[Averager needle] If true, the vario gauge will display a hollow averager needle.  During cruise, this needle displays the average netto value.  During circling, this needle displays the average gross value.
-\item[FLARM display]
-This enables the display of FLARM traffic on the map window as well
-as the pop-up radar-like display.
+\item[Show bugs*] Whether to show the bugs percentage.
+\item[Show ballast*] Whether to show the ballast percentage.
+\item[Show gross*] Whether to show the gross vario value
+\item[Averager needle*] If true, the vario gauge will display a hollow averager needle.  During cruise, this needle displays the average netto value.  During circling, this needle displays the average gross value.
+\item[FLARM map] This enables the display of FLARM traffic on the map window as well as the pop-up radar-like display.
 \begin{description}
-\item[OFF] FLARM radar and map display disabled
-\item[ON/Fixed] FLARM radar enabled, map display enabled with fixed scale.
-\item[ON/Scaled] FLARM radar enabled, map display enabled and auto scaled.
+\item[OFF] FLARM map display disabled
+\item[ON/Fixed] FLARM map display enabled with fixed scale.
+\item[ON/Scaled] FLARM map display enabled and auto scaled.
 \end{description}
 When auto scaling is enabled, the FLARM targets on the map display are scaled so that when the map is at large zoom levels, targets are still visible.
-\item[FLARM symbols]  This controls the symbols used to display FLARM targets on the radar display.
-\begin{description}
-\item[Relative altitude] The relative altitude of the target is represented as a shape that becomes triangular for extreme above/below heights, square at the same altitude.  An arrow pointing up indicates the target is above the aircraft.
-\item[Bearing] The track bearing of the target relative to the track bearing of the aircraft is displayed as an arrow head.
+\item[FLARM radar] Enables the display of the FLARM radar gauge. The track bearing of the target relative to the track bearing of the aircraft is displayed as an arrow head, and a triangle pointing up or down shows the relative altitude of the target relative to you. 
+\item[ThermalAssistant] Enables the display of the ThermalAssistant gauge.
 \end{description}
-In all modes, the color of the target indicates the threat level.
+In all FLARM environment, the color of the target indicates the threat level.
 
-\end{description}
+%\clearpage
+%\section{Task}
+
+%\begin{center}
+%\includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-11.png}
+%\end{center}
+
+%\begin{description}
+%\item[Auto advance]  Determines how waypoints are advanced through the task.
+% See Section~\ref{sec:advanc-rest-tasks} for more details on how this
+% works.
+%\begin{description}
+%\item[Manual] Fully manual task waypoint advancing
+%\item[Auto] Fully automatic task waypoint advancing
+%\item[Arm] Automatic task waypoint advancing needs to be armed each waypoint
+%\item[Arm start] Automatic task waypoint advancing needs to be armed for the start
+%\end{description}
+%\item[Start type]  Line, cylinder, or 90 degree FAI sector.
+%\item[Start radius]  Radius of the start cylinder or half-length of the 
+%  start line.
+%\item[Sector type]  Cylinder, FAI sector or German (DAe 0.5/10) sector
+%\begin{description}
+%\item[Cylinder]  Barrel cylinder of specified radius.
+%\item[FAI sector]  90 degree sector centered at bisector, at specified range
+%\item[DAe 0.5/10] German national sector type, equivalent to 0.5 km radius barrel and 10 km FAI sector.
+%\end{description}
+%\item[Sector radius]  Radius of the observation area.
+%\item[Finish type]  Line, cylinder, or 90 degree FAI sector.
+%\item[Finish radius]  Radius of the finish cylinder or length of the 
+%  finish line.
+
+%\end{description}
 
 \clearpage
-\section{Task}
-
-\begin{center}
-\includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-11.png}
-\end{center}
-
-\begin{description}
-\item[Auto advance]  Determines how waypoints are advanced through the task.
- See Section~\ref{sec:advanc-rest-tasks} for more details on how this
- works.
-\begin{description}
-\item[Manual] Fully manual task waypoint advancing
-\item[Auto] Fully automatic task waypoint advancing
-\item[Arm] Automatic task waypoint advancing needs to be armed each waypoint
-\item[Arm start] Automatic task waypoint advancing needs to be armed for the start
-\end{description}
-\item[Start type]  Line, cylinder, or 90 degree FAI sector.
-\item[Start radius]  Radius of the start cylinder or half-length of the 
-  start line.
-\item[Sector type]  Cylinder, FAI sector or German (DAe 0.5/10) sector
-\begin{description}
-\item[Cylinder]  Barrel cylinder of specified radius.
-\item[FAI sector]  90 degree sector centered at bisector, at specified range
-\item[DAe 0.5/10] German national sector type, equivalent to 0.5 km radius barrel and 10 km FAI sector.
-\end{description}
-\item[Sector radius]  Radius of the observation area.
-\item[Finish type]  Line, cylinder, or 90 degree FAI sector.
-\item[Finish radius]  Radius of the finish cylinder or length of the 
-  finish line.
-
-\end{description}
-
-\clearpage
-\section{Task Rules}
+\section{Default Task Rules}
 Task rules may be defined to limit valid starts according to competition
 rules.
 
@@ -5577,13 +5637,20 @@ rules.
 
 \begin{description}
 \item[Start max speed]  Maximum speed allowed in start observation zone.  Set to 0 for no limit.
+\item[Start max speed margin] Maximum speed above maximum start speed to tolerate.  Set to 0 for no tolerance.
 \item[Start max height]  Maximum height above ground while starting the task.  Set to 0 for no limit.
+\item[Start max height margin]  Maximum height above maximum start height to tolerate.  Set to 0 for no tolerance.
+\item[Start height ref]  Reference used for start max height rule
+\begin{description}
+\item[MSL] Reference is altitude above mean sea level
+\item[AGL] Reference is the height above the start point
+\end{description}
 \item[Finish min height]  Minimum height above ground while finishing the task.  Set to 0 for no limit. 
-\item[FAI finish height]  If enabled, this option requires the minimum height above ground for finish to be greater than 1000m below the start height.
+%\item[FAI finish height]  If enabled, this option requires the minimum height above ground for finish to be greater than 1000m below the start height.
 \item[Online contest] Determines the rules used to optimise On-Line Contest paths. 
 \begin{description}
 \item[Sprint]  Conforms to FAI IGC League rules.  Up to 5 points including start and finish, maximum duration 2.5 hours, finish height must not be below start height.
-\item[Triangle]  Conforms to FAI OLC triangle rules.  Four points with common start and finish.  For tasks longer than 500km, no leg less than 25\% or larger than 45\%; otherwise no leg less than 28\% of total.  Finish height must not be lower than start height less 1000 meters.
+\item[Triangle FAI]  Conforms to FAI OLC triangle rules.  Four points with common start and finish.  For tasks longer than 500km, no leg less than 25\% or larger than 45\%; otherwise no leg less than 28\% of total.  Finish height must not be lower than start height less 1000 meters.
 \item[Classic]  Conforms to OLC classic rules.  Up to seven points including start and finish, finish height must not be lower than start height less 1000 meters.  Points awarded 80\% on second last leg and 60\% on last leg.
 \end{description}
 \end{description}
@@ -5635,19 +5702,23 @@ The table below shows the infobox numbering for portrait screen layout:
 \section{Logger}
 
 This page allows you to set the pilot and aircraft details used for
-annotating XCSoar's IGC logger.  The fields available are the pilot's
-name, aircraft type, and aircraft registration.
+annotating XCSoar's IGC logger. 
+% The fields available are the pilot's name, aircraft type, and aircraft registration.
 
 \begin{center}
 \includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-17.png}
 \end{center}
 
 \begin{description}
-\item[Time step cruise]  This is the time interval between logged points when not circling. 
-\item[Time step circling]  This is the time interval between logged points when circling. 
+\item[Time step cruise*]  This is the time interval between logged points when not circling. 
+\item[Time step circling*]  This is the time interval between logged points when circling. 
 \item[Pilot name]  This is the pilot name used in the internal software logger declaration.
 \item[Aircraft type]  This is the aircraft type used in the internal software logger declaration.
-\item[Aircraft rego]  This is the aircraft registration used in the internal software logger declaration.
+%\item[Aircraft rego]  This is the aircraft registration used in the internal software logger declaration.
+\item[Competition ID]  This is the aircraft competition ID.
+\item[Logger ID]  This is the logger registration.
+\item[Short file name]  This determines whether the logger uses the short or the long IGC file name.
+\item[Auto logger*] Enables the automatic starting and stopping of the logger on takeoff and landing respectively. Disable when flying paragliders.
 \end{description}
 
 \clearpage
@@ -5696,6 +5767,43 @@ this case, a new waypoint file ``waypoints1.dat'' will be generated.
 It is then left to the user to set the primary waypoint file to this
 file if he/she wants to use the edited data instead of the data stored
 in the XCM file.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%\clearpage
+%\section{Pages}
+
+%TODO: more info
+
+%This page provides different views of the map.
+
+%\begin{center}
+%\includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-pages.png}
+%\end{center}
+
+%You can choose between the simple map, the map with infoboxes or additionally with aux. infoboxes.
+
+%%%%%%%%%%%%%%%%%%%%%
+
+\clearpage
+\section{Experimental features}
+
+%TODO: gestures
+
+This page provides experimental features which are not finished yet.
+
+\begin{center}
+\includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/config-exp.png}
+\end{center}
+
+The following functions are provided:
+\begin{description}
+\item[Gestures] Enables gesture control. Useful for devices without hardware keys such as PNAs.
+\item[L/D Average period] Average glide ratio is always calculated in real time. Here you can decide on how many seconds of flight this calculation must be done.
+\item[Extended Visual Glide] If you want Visual Glide to display also moving circles or arcs, in addition to the steady mode then select Extended.
+\item[GPS Height Offset] Adjust GPS height with a fixed offset. Should be manually set each time as it will not be saved to the registry.
+\end{description}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Data Files}\label{cha:data-files}
